# cripto_final

./: .gitignore  CHANGELOG.md  README.md  cabal.project  cripto-final.cabal  download.sh
.github/workflows/: ci.yml
app/: DES.hs  DiffieHellman.hs  Main.hs  Network.hs  Protocol.hs
