cabal-version:      3.0
name:               cripto-final
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             0rphee
maintainer:         0rph3e@proton.me
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable cripto-final
    import:           warnings
    main-is:          Main.hs
    other-modules:    DES
                    , DiffieHellman
                    , Network
                    , Protocol
    -- other-extensions:
    build-depends:    base ^>=4.20
                    , bytestring
                    , vector
                    , optparse-applicative
                    , network
                    , binary
                    , random
                    , text
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall -O0 -threaded